--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -596,12 +596,14 @@ en:
       later_today: "Later today"
       next_business_day: "Next business day"
       tomorrow: "Tomorrow"
-      next_week: "Next week"
       post_local_date: "Date in post"
       later_this_week: "Later this week"
+      this_weekend: "This weekend"
       start_of_next_business_week: "Monday"
       start_of_next_business_week_alt: "Next Monday"
+      two_weeks: "Two weeks"
       next_month: "Next month"
+      six_months: "Six months"
       custom: "Custom date and time"
       relative: "Relative time"
       none: "None needed"
