--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2692,16 +2692,12 @@ en:
         pin: "Pin Topic"
         unpin: "Un-Pin Topic"
         pin_globally: "Pin Topic Globally"
-        make_banner: "Banner Topic"
+        make_banner: "Make Banner Topic"
         remove_banner: "Remove Banner Topic"
 
       reply:
         title: "Reply"
         help: "begin composing a reply to this topic"
-
-      clear_pin:
-        title: "Clear pin"
-        help: "Clear the pinned status of this topic so it no longer appears at the top of your topic list"
 
       share:
         title: "Share"
@@ -3894,10 +3890,6 @@ en:
             include_subcategories:
               label: "Include Subcategories"
 
-      commits:
-        latest_changes: "Latest changes: please update often!"
-        by: "by"
-
       groups:
         new:
           title: "New Group"
@@ -4592,7 +4584,6 @@ en:
           details: "Details"
           previous_value: "Previous"
           new_value: "New"
-          diff: "Diff"
           show: "Show"
           modal_title: "Details"
           no_previous: "There is no previous value."
