--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -53,6 +53,7 @@ en:
       long_date_with_year_with_linebreak: "MMM D, 'YY <br/>LT"
 
       wrap_ago: "%{date} ago"
+      wrap_on: "on %{date}"
 
       tiny:
         half_a_minute: "< 1m"
